docs/apache-airflow-providers-microsoft-azure/10.4.0/_sources/_api/airflow/providers/microsoft/azure/operators/powerbi/index.rst.txt
:py:mod:`airflow.providers.microsoft.azure.operators.powerbi`
=============================================================

.. py:module:: airflow.providers.microsoft.azure.operators.powerbi


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.microsoft.azure.operators.powerbi.PowerBILink
   airflow.providers.microsoft.azure.operators.powerbi.PowerBIDatasetRefreshOperator




.. py:class:: PowerBILink


   Bases: :py:obj:`airflow.models.BaseOperatorLink`

   Construct a link to monitor a dataset in Power BI.

   .. py:attribute:: name
      :value: 'Monitor PowerBI Dataset'

      

   .. py:method:: get_link(operator, *, ti_key)

      Link to external system.

      Note: The old signature of this function was ``(self, operator, dttm: datetime)``. That is still
      supported at runtime but is deprecated.

      :param operator: The Airflow operator object this link is associated to.
      :param ti_key: TaskInstance ID to return link for.
      :return: link to external system



.. py:class:: PowerBIDatasetRefreshOperator(*, dataset_id, group_id, conn_id = PowerBIHook.default_conn_name, timeout = 60 * 60 * 24 * 7, proxies = None, api_version = None, check_interval = 60, **kwargs)


   Bases: :py:obj:`airflow.models.BaseOperator`

   Refreshes a Power BI dataset.

   :param dataset_id: The dataset id.
   :param group_id: The workspace id.
   :param conn_id: Airflow Connection ID that contains the connection information for the Power BI account used for authentication.
   :param timeout: Time in seconds to wait for a dataset to reach a terminal status for asynchronous waits. Used only if ``wait_for_termination`` is True.
   :param check_interval: Number of seconds to wait before rechecking the
       refresh status.

   .. py:attribute:: template_fields
      :type: Sequence[str]
      :value: ('dataset_id', 'group_id')

      

   .. py:attribute:: template_fields_renderers

      

   .. py:attribute:: operator_extra_links
      :value: ()

      

   .. py:method:: execute(context)

      Refresh the Power BI Dataset.


   .. py:method:: execute_complete(context, event)

      Return immediately - callback for when the trigger fires.

      Relies on trigger to throw an exception, otherwise it assumes execution was successful.



